2000-03-03  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* man/smtp.8, man/smtpserver.8:
	    Updates/fixes to text.

	* scheduler/scheduler.c, scheduler/scheduler.h, scheduler/conf.c,
	  scheduler/agenda.c, scheduler/msgerror.c, scheduler/readconfig.c,
	  scheduler/prototypes.h, man/scheduler.8:
	    - Simplified slightly doagenda()
	    - Created accumulated report collector/reporter subservice.

2000-03-01  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/forms/delivery:
	    Added an URL reference to a "decode key" at
		http://www.zmailer.org/reports.html

	* scheduler/scheduler.h, scheduler/update.c, scheduler/threads.c,
	  scheduler/prototypes.h, scheduler/readconfig.c, scheduler/msgerror.c,
	  man/scheduler.8:
	    - Reworked how IDLE handles idle process recycling; always the
	      channel must match, host may or may not need to match.
	    - Reworked parts of error reporting in preparation for creating
	      delay reports.  (And earlier FAILED/DELIVERED/RELAYED reports
	      at the same time, of course..)

	* proto/cf/fqdnalias.cf:
	    Spotted some FIXME things..

	* transports/smtp/smtp.c:
	    When socket write failure causes shutdown of write direction
	    socket, do turn all back reported 500 series errors into softer
	    400 series codes.  Won't unnecessarily reject messages.

2000-02-29  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpetrn.c, man/smtpserver.8, man/scheduler.8:
	    Completed the etrn-cluster code. Seems to work, even.
	    Updated man-pages a bit.

	* smtpserver/smtpserver.c, smtpserver/smtpserver.h,
	  smtpserver/cfgread.c, smtpserver/smtpcmds.c:
	    - PARAM sum-sizeoption-value  -- modify how MAIL FROM:<> SIZE=nn
	      option value is processed when compared against various limits
	      in the system -- if the option is present, effectively the
	      system required free space is message size multiplied by the
	      recipient count.
	    - PARAM max-unknown-commands nn -- how many pure junk commands